solved horizontal scroll

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -17,6 +17,7 @@ body {
   scroll-behavior: smooth;
   min-height: 100vh;
   font-family: 'Overpass',sans-serif;
+  overflow-x: hidden;
 }
 
 .bt-left {
